-- Code generated by nao gen sqlite from schema.dbml; DO NOT EDIT.
--
-- Integration-test fixture for the v0 CRUD generator.

PRAGMA foreign_keys = ON;

CREATE TABLE users (
  id INTEGER PRIMARY KEY,
  email TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL,
  -- NULL until the user writes one
  bio TEXT,
  created_at TIMESTAMP NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE orders (
  id INTEGER PRIMARY KEY,
  user_id INTEGER NOT NULL,
  status TEXT NOT NULL DEFAULT 'pending' CHECK (status IN ('pending', 'shipped', 'delivered')),
  total TEXT NOT NULL,
  placed_at TIMESTAMP,
  FOREIGN KEY (user_id) REFERENCES users (id)
);

CREATE TABLE user_tags (
  user_id INTEGER NOT NULL,
  tag TEXT NOT NULL,
  PRIMARY KEY (user_id, tag),
  FOREIGN KEY (user_id) REFERENCES users (id)
);
