// The integration fixture: one schema exercising every v0 CRUD shape
// against a real SQLite (decision D25). The generated siblings
// (nao_models.go, nao_queries.go, nao_schema.sql) are checked in and
// drift-tested; refresh them with go generate ./itest.
Project itest {
  note: 'Integration-test fixture for the v0 CRUD generator.'
}

Enum order_status {
  pending
  shipped
  delivered [note: 'Terminal state']
}

Table users {
  id integer [pk, increment]
  email varchar [not null, unique]
  name varchar [not null]
  bio text [note: 'NULL until the user writes one']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table orders {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  status order_status [not null, default: order_status.pending]
  total decimal(10,2) [not null]
  placed_at timestamp
}

// composite primary key, no auto-increment anywhere
Table user_tags {
  user_id integer [not null, ref: > users.id]
  tag varchar [not null]

  indexes {
    (user_id, tag) [pk]
  }
}
